--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,176 +11,6 @@ body {
   font-family: 'Walter Turncoat', Calibri, Arial, sans-serif;
 }
 
-.container {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.center-container {
-  display: flex;
-  align-items: center;
-  flex: 0.9;
-  height: 100%;
-}
-
-#content-title {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-#left-container {
-  flex: 0.3;
-  height: 95%;
-}
-
-#middle-container {
-  flex: 0.7;
-  justify-content: center;
-  align-items: center;
-  height: 95%;
-}
-
-#right-container {
-  flex: 0.3;
-  height: 95%;
-}
-
-/* #graph-container {
-  display: flex;
-  height: 50%;
-  width: 100%;
-  border-bottom: none;
-  justify-content: center;
-  align-items: flex-end;
-  border: solid 1px lightgray;
-  background-color: whitesmoke;
-} */
-
-.graph-controls {
-  height: 8%;
-  margin-bottom: 20px;
-  display: flex;
-  position: relative;
-}
-
-#graph-title {
-  display: flex;
-  align-items: flex-start;
-  position: relative;
-}
-
-.vertices-number-container {
-  color: rgb(51, 51, 51);
-  opacity: 90%;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-}
-
-.edges-number-container {
-  color: rgb(51, 51, 51);
-  opacity: 90%;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-}
-
-.graph-controls > i {
-  color: rgb(51, 51, 51);
-}
-
-#graph-svg {
-  position: absolute;
-}
-
-#td-container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  width: 100%;
-  height: 50%;
-  border: solid 1px lightgray;
-  background-color: whitesmoke;
-}
-
-#td-svg {
-  position: absolute;
-}
-
-#nice-td-svg {
-  position: absolute;
-  /* height: 100%; */
-  /* width: 100%; */
-}
-
-.td-controls {
-  display: flex;
-  position: relative;
-  font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.nice-td-controls {
-  display: flex;
-  position: relative;
-  font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
-.compute-td-text:hover {
-  color: orange;
-  cursor: pointer;
-}
-
-#graph-container div {
-  color: rgb(51, 51, 51);
-}
-
-#nice-td-container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  width: 100%;
-  height: 100%;
-  background-color: whitesmoke;
-  border: solid 1px lightgray;
-}
-
-.app-interface {
-  margin-top: 10px;
-}
-
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.hidden > div {
-  display: none;
-}
-
-.visible > div {
-  display: block;
-}
-
 .dragLine.hidden {
   stroke-width: 0;
 }
@@ -190,135 +20,8 @@ body {
   stroke-width: 3px;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: rgb(51, 51, 51);
-  display: flex;
-  flex-shrink: 0;
-  height: 3%;
-  align-items: center;
-  justify-self: center;
-  overflow: hidden;
-}
-
-.topnav div {
-  float: left;
-  /* display: block; */
-  display: flex;
-  align-items: center;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 0px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-  height: 100%;
-  user-select: none;
-}
-
-.topnav div:hover {
-  background-color: #4caf50;
-}
-
-.project-title {
-  height: 100%;
-  background-color: #4caf50;
-  color: white;
-  font-weight: bold;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
-
-/* Add a grey background to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child),
-  .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {
-    float: none;
-  }
-  .topnav.responsive .dropdown-content {
-    position: relative;
-  }
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-
-g.text:hover {
-  font-size: 50px;
-}
-
-#app-interface {
-  width: 60%;
-  padding: 10px;
-}
-
-.error-messages {
-  color: red;
-  text-align: center;
-}
-
-.link {
-  stroke: rgb(51, 51, 51);
-  stroke-width: 3.5;
-}
-
 .highlighted-link {
   stroke: orange;
-}
-
-.label {
-  fill: white;
-  /* font-size: 18px; */
-  font-weight: bold;
-  text-anchor: middle;
-  pointer-events: none;
-  user-select: none;
-}
-
-.node {
-  fill: rgb(238, 238, 238);
-  stroke: rgb(51, 51, 51);
-  stroke-width: 3.5px;
 }
 
 .highlighted-node {
@@ -341,22 +44,6 @@ g.text:hover {
 
 .table td {
   padding: 0 25px;
-}
-
-.material-icons.md-48 {
-  font-size: 48px;
-  cursor: pointer;
-  user-select: none;
-  color: rgb(51, 51, 51);
-  opacity: 80%;
-}
-
-.material-icons.md-48:hover {
-  color: orange;
-}
-
-#graph-svg div:hover {
-  color: orange;
 }
 
 .red {
@@ -385,13 +72,6 @@ td {
   stroke: #bf55ec !important;
 }
 
-#control-keys-container {
-  display: flex;
-  background-color: rgb(51, 51, 51);
-  height: 5%;
-  justify-content: center;
-}
-
 .moving-node {
   cursor: grabbing;
 }
@@ -410,26 +90,6 @@ td {
   align-items: center;
   justify-content: space-between;
   display: flex;
-}
-
-.previous {
-  display: flex;
-}
-
-.next {
-  display: flex;
-}
-
-.next:hover {
-  color: orange;
-}
-
-.previous:hover {
-  color: orange;
-}
-
-.control-keys p {
-  font-weight: bold;
 }
 
 /* The Modal (background) */
@@ -470,17 +130,10 @@ td {
   cursor: pointer;
 }
 
-.theory-content {
-  padding: 30px;
-  line-height: 1.6;
-  overflow-y: auto;
-}
-
-div.tooltip {
+/* div.tooltip {
   position: absolute;
   z-index: 1;
   background-color: white;
-  /* max-width; 200px; */
   height: auto;
   padding: 1px;
   border-style: solid;
@@ -488,23 +141,7 @@ div.tooltip {
   border-width: 1px;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
   pointer-events: none;
-}
-
-#dp-arrow {
-  position: absolute;
-  /* z-index: 10; */
-  opacity: 0;
-  color: red;
-}
-
-.home-link {
-  text-decoration: none;
-  color: white;
-}
-
-.loading {
-  color: red;
-}
+} */
 
 .drawinng {
   cursor: crosshair;
@@ -513,28 +150,6 @@ div.tooltip {
 .drawing-disabled {
   pointer-events: none;
   cursor: pointer;
-}
-
-.exercise-locked {
-  opacity: 50%;
-}
-
-.exercises {
-  margin-top: 50px;
-}
-
-.exercise {
-  margin-bottom: 30px;
-}
-
-.exercise-active {
-  color: orange;
-}
-
-.exercise-title:hover {
-  color: orange;
-  cursor: pointer;
-  text-decoration: underline;
 }
 
 .separating-node {
@@ -560,42 +175,6 @@ div.tooltip {
 .wrong-answer {
   vertical-align: middle;
   color: red;
-}
-
-.some-math {
-  display: flex;
-  justify-content: space-around;
-  padding: 5px;
-  /* justify-content: space-between; */
-  /* display: inline; */
-  /* text-align: center; */
-}
-
-.separator-exercises-info {
-  font-style: italic;
-  opacity: 90%;
-  font-size: 14px;
-  background-color: lightblue;
-  padding: 10px;
-}
-
-.hint {
-  font-style: italic;
-  opacity: 90%;
-  font-size: 14px;
-  background-color: lightsalmon;
-  padding: 10px;
-}
-
-.hint-content {
-  font-size: 14px;
-  background-color: lightsalmon;
-  padding: 10px;
-}
-
-.hint:hover {
-  color: white;
-  cursor: pointer;
 }
 
 .tree-width-container {
@@ -634,7 +213,7 @@ div.tooltip {
   cursor: pointer;
   padding: 5px 15px;
   /* display: inline-block; */
-  margin: 15px 30px;
+  margin: 15px 0px 15px 0px;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
@@ -647,6 +226,15 @@ div.tooltip {
   -moz-transition: none;
   transition: none;
   border-radius: 0 0 5px 5px;
+}
+
+svg {
+  z-index: -1;
+  position: absolute;
+}
+
+.btn-container {
+  cursor: pointer;
 }
 
 .button-container {
@@ -681,27 +269,10 @@ div.tooltip {
   fill:purple;
 }
 
-#m {
-  display: flex;
-  border: solid 1px lightgray;
-}
-
-#id1 {
-  flex: 0.3;
-  border-right: solid 1px lightgray;
-}
-
-#id2 {
-  flex: 0.7
-}
-
 .choices {
   display: flex;
   flex-direction: column;
   margin: 20px 0 20px 0;
-  /* flex: 0.8 */
-  /* width: 100%; */
-  /* height: 100%; */
 }
 
 .choice {
@@ -710,7 +281,6 @@ div.tooltip {
   position: relative;
   display: flex;
   align-items: center;
-  /* width: 100%; */
   min-height: 50px;
   color: #333;
   line-height: 1.2em;
@@ -727,41 +297,26 @@ div.tooltip {
 }
 
 .speech-bubble-container {
+  z-index: 100;
   display: flex;
   flex-direction: column;
   position: absolute;
   padding: 10px;
   width: 250px;
-  /* height: 250px; */
-  -webkit-transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%); 
   border: 1px solid lightgray;
   background-color: white;
 }
 
 
 .text-container {
-  /* display: flex; */
-  /* align-self: center; */
   flex: 0.7;
   width: 100%;
-  /* height: 100%; */
-  /* position: absolute; */
   text-align: center;
   vertical-align: center;
   align-items: center;
   line-height: 20px;
-  /* padding: 25px; */
-  /* background-color: #fff; */
-  /* border: 4px solid #666; */
-  /* opacity: 0.8; */
   font-size: 20px;
-  /* -webkit-border-radius: 30px; */
-  /* -moz-border-radius: 30px; */
-  /* -webkit-transform: translate(-50%, -50%);  */
-  /* border-radius: 30px; */
-  /* -webkit-box-shadow: 2px 2px 4px #888; */
-  /* -moz-box-shadow: 2px 2px 4px #888; */
-  /* box-shadow: 2px 2px 4px #888;  */
 }
 
 .quiz {
@@ -798,4 +353,94 @@ div.tooltip {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#tw-intro {
+  width: 50%;
+  height: 50%;
+}
+
+.graphLink {
+  stroke: rgb(51, 51, 51);
+  stroke-width: 3.5;
+}
+
+.label {
+  fill: white;
+  font-weight: bold;
+  text-anchor: middle;
+  pointer-events: none;
+  user-select: none;
+}
+
+.graphNode {
+  stroke: rgb(51, 51, 51);
+  stroke-width: 3.5px;
+}
+
+.result-container {
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: lightblue;
+  margin-top: 20px; 
+  margin-bottom: 20px;
+  padding: 15px;
+}
+
+.result-math {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.nonhighlighted-vertex {
+  /* fill: #1f77b4; */
+}
+
+.highlighted-vertex {
+  fill: orange;
+  transition: fill 200ms;
+}
+
+.vertex-in-max-set {
+  fill: green;
+}
+
+.tree-link {
+  stroke: black;
+  stroke-width: 3.5px;
+}
+
+.yepc {
+  z-index: 10;
+  width: 100px;
+  height: 100px;
+}
+
+#tooltip {
+  background-color: white;
+  border: 2.5px solid black;
+  z-index: 100000;
+  padding: 15px;
+  transform: translate(-100%, 25px);
+}
+
+#tooltip-arrow { 
+  position: absolute;
+  width: 50px;				/* width of image (px or % or auto) */
+  height: auto;	
+  padding: 0px; 
+  margin: 0px;
+  line-height: 100%;
+  z-index: 100;
+  transform: translate(-100%, -50%);
 }
